Bug 1747173 - IMAP flag changes not seen when changed by another client after inactivity timeout. r=benc